syntax = "proto3";

package org.tasks.grpc;

option java_package = "org.tasks";
option java_outer_classname = "GrpcProto";

enum UiItemType {
  Header = 0;
  Task = 1;
}

message UiItem {
  UiItemType type = 1;
  uint64 id = 2;
  string title = 3;
  bool completed = 4;
  uint32 priority = 5;
  bool repeating = 6;
  bool collapsed = 7;
  bool hidden = 8;
  uint32 indent = 9;
  uint32 numSubtasks = 10;
}

message Tasks {
  uint32 totalItems = 1;
  repeated UiItem items = 2;
}

message LastUpdate {
  uint64 now = 1;
}

message Settings {
  repeated uint64 collapsed = 1;
  string filter = 2;
  bool showHidden = 3;
  bool showCompleted = 4;
}

message UpdateSettingsRequest {
  Settings settings = 1;
}

message GetTasksRequest {
  uint32 position = 1;
  uint32 limit = 2;
}
message CompleteTaskRequest {
  uint64 id = 1;
  bool completed = 2;
}
message CompleteTaskResponse { bool success = 1; }

message ToggleGroupRequest {
  uint64 value = 1;
  bool collapsed = 2;
}
message ToggleGroupResponse {}

service WearService {
  rpc getTasks(GetTasksRequest) returns (Tasks);
  rpc completeTask(CompleteTaskRequest) returns (CompleteTaskResponse);
  rpc toggleGroup(ToggleGroupRequest) returns (ToggleGroupResponse);
  rpc updateSettings(UpdateSettingsRequest) returns (Settings);
  rpc toggleSubtasks(ToggleGroupRequest) returns (ToggleGroupResponse);
}
